--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
     <div>
         <ul>
             <li><a href="./recipes/pizza.html">Margherita Pizza</a></li>
-            <li><a href="./recipes/carbonara_pasta.html">Carbonara Pasta</a></li>
-            <li><a href="./recipes/Lasagna">Lasagna</a></li>
-            <li>Recipe 4</li>
-            <li>Recipe 5</li>
-            <li>Recipe 6</li>
-            <li><a href="./recipes/recipe_layout.html">Generic Recipe</a></li>
+            <li><a href="./recipes/spaghetti_carbonara.html">Carbonara Pasta</a></li>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <!--<li><a href="./recipes/recipe_layout.html">Generic Recipe</a></li>-->
         </ul>
     </div>
 </body>
