modify spaghetti_carbonara.html recipe; added sections: description, ingredients and steps

--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -12,16 +12,24 @@
 
     <div>
         <h3>Description</h3>
-        <p>In this space there will be the description of the dish</p>
+        <p>Spaghetti Carbonara is a quintessential Italian pasta dish renowned for its simplicity, yet unparalleled richness and flavor. Picture a plate of perfectly cooked spaghetti noodles, coated in a creamy, golden sauce, speckled with crispy bits of pancetta or guanciale, and generously dusted with grated Pecorino Romano and Parmigiano-Reggiano cheese.</p>
+        <p>The star of the show is the sauce, which achieves its luxurious texture and flavor from just a few key ingredients: eggs, cheese, and black pepper. The eggs are whisked together with the grated cheeses, creating a velvety mixture that clings to the hot pasta, enveloping each strand in a blanket of creamy goodness. The addition of freshly ground black pepper adds a subtle kick and depth of flavor, balancing the richness of the sauce.</p>
+        <p>The dish typically begins by crisping up diced pancetta or guanciale in a skillet, releasing its savory, salty essence and infusing the dish with its distinct flavor. The rendered fat from the meat serves as the base for the sauce, marrying the flavors of the pasta and cheese together in perfect harmony.</p>
+        <p>As the al dente spaghetti noodles are cooked to perfection, they are tossed with the crispy pancetta or guanciale, allowing the residual heat to melt the cheese and create a silky sauce that coats each strand. The result is a dish that is simultaneously creamy, savory, and comforting, with a satisfying bite and depth of flavor that lingers on the palate.</p>
+        <p>Spaghetti Carbonara is best enjoyed immediately, served piping hot and garnished with an extra sprinkle of grated cheese and a dusting of freshly ground black pepper. With each forkful, you'll experience a symphony of flavors and textures that is both comforting and indulgent, making it a beloved favorite among pasta enthusiasts and food lovers alike.</p>
     </div>
     <div>
         <h3>Ingredients</h3>
         <p>
             <ul>
-                <li>Ingredient a</li>
-                <li>Ingredient b</li>
-                <li>Ingredient c</li>
-                <li>Ingredient d</li>
+                <li>400g spaghetti</li>
+                <li>150g guanciale or pancetta, diced</li>
+                <li>3 large eggs</li>
+                <li>75g Pecorino Romano cheese, grated</li>
+                <li>50g Parmigiano-Reggiano cheese, grated</li>
+                <li>Freshly ground black pepper</li>
+                <li>Salt (for pasta water)</li>
+                <li>Extra virgin olive oil (optional, for finishing)</li>
             </ul>
         </p>
     </div>
@@ -29,11 +37,16 @@
         <h3>Steps</h3>
         <p>
             <ol>
-                <li>Step 1</li>
-                <li>Step 2</li>
-                <li>Step 3</li>
-                <li>Step 4</li>
-                <li>Step 5</li>
+                <li>Bring a large pot of salted water to a boil. Cook the spaghetti according to the package instructions until al dente.</li>
+                <li>While the pasta is cooking, heat a large skillet over medium heat. Add the diced guanciale or pancetta to the skillet and cook, stirring occasionally, until it is golden and crispy, about 5-7 minutes. Remove from heat and set aside.</li>
+                <li>In a mixing bowl, whisk together the eggs, grated Pecorino Romano cheese, and grated Parmigiano-Reggiano cheese until well combined. Season with a generous amount of freshly ground black pepper.</li>
+                <li>Once the spaghetti is cooked, reserve about 1 cup of the pasta cooking water, then drain the spaghetti and return it to the pot.</li>
+                <li>Immediately add the crispy guanciale or pancetta to the pot with the hot spaghetti and toss to combine. The heat from the pasta will help render the fat from the meat and create a flavorful base for the sauce.</li>
+                <li>Gradually pour the egg and cheese mixture over the hot spaghetti, tossing continuously to coat the pasta evenly. If the sauce seems too thick, add a splash of the reserved pasta cooking water to thin it out.</li>
+                <li>Continue tossing the spaghetti with the sauce until it is creamy and well-coated. The residual heat from the pasta will cook the eggs gently, creating a silky smooth sauce without scrambling them.</li>
+                <li>Taste the spaghetti carbonara and adjust the seasoning with salt and pepper if necessary.</li>
+                <li>Serve the spaghetti carbonara immediately, portioned into individual bowls. Garnish with additional grated cheese and a sprinkle of freshly ground black pepper if desired. Drizzle with a little extra virgin olive oil for extra richness and flavor.</li>
+                <li>Enjoy your authentic Italian spaghetti carbonara! Buon appetito!</li>
             </ol>
         </p>
         <p>And <em>voila!</em> the dish is ready to eat!</p>
