--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
         <ul>
             <li><a href="./recipes/pizza.html">Margherita Pizza</a></li>
-            <li><a href="./recipes/spaghetti_carbonara.html">Carbonara Pasta</a></li>
+            <li><a href="./recipes/spaghetti_carbonara.html">Spaghetti Carbonara</a></li>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <!--<li><a href="./recipes/recipe_layout.html">Generic Recipe</a></li>-->
         </ul>
