--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div>
         <ul>
-            <li><a href="./recipes/pizza.html">Margherita Pizza</a></li>
+            <li><a href="./recipes/pizza_margherita.html">Pizza Margherita</a></li>
             <li><a href="./recipes/spaghetti_carbonara.html">Spaghetti Carbonara</a></li>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <!--<li><a href="./recipes/recipe_layout.html">Generic Recipe</a></li>-->
